Changing the implementation of Base64.